Updating text for fear&greed index

--- a/fear_and_greed_index.ipynb
+++ b/fear_and_greed_index.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Crypto Fear & Greed Index\n",
+    "\n",
+    "Source: https://alternative.me/crypto/fear-and-greed-index/\n",
+    "\n",
+    "This code allows you to download the Crypto Fear & Greed Index for Bitcoin into a CSV file, which can be then used as a side input for your trading strategy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
