--- a/traders/rebalancing_trader.ipynb
+++ b/traders/rebalancing_trader.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Rebalancing Trader\n",
     "\n",
-    "The goal of the `rebalancing_trader` is to find out what is the optimal allocation of funds between the base (crypto)currency and the quote currency.\n",
+    "The goal of the `rebalancing` trader is to find out what is the optimal allocation of funds between the base (crypto)currency and the quote currency.\n",
     "\n",
     "At any given moment the trader has (on its account) some amount $b$ of a base (crypto)currency (e.g. `BTC`) and some amount $q$ of a quote currency (e.g. `USD`). Let $p$ denote the base (crypto)currency price (e.g. `BTCUSD` price). The total value of this portfolio is then $v = b * p + q$. Let's assume that $v > 0$ and that we would like to keep $\\alpha * 100\\%$ of the total portfolio value in the base (crypto)currency, i.e. we would like to maintain the following relation: $b * p = \\alpha * (b * p + q)$ over time (let's call this $\\alpha$-allocation, where $\\alpha \\in [0; 1]$). The question is, what is the optimal value of $\\alpha$ and how to maintain this $\\alpha$-allocation over time with as little transaction fees as possible?\n",
     "\n",
@@ -36,26 +36,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's pick $\\alpha = 0.7$ and $\\epsilon = 0.05$ and let's run the `rebalancing_trader` over the 2-year period `2017-01-01` - `2019-01-01` with 5 minute sampling as follows:\n",
+    "Now let's pick $\\alpha = 0.70$ and $\\epsilon = 0.05$ and let's run the `rebalancing` trader over over a 4 year time period: `[2017-01-01 - 2021-01-01)` with 5 minute sampling rate as follows:\n",
     "\n",
     "```\n",
     "bazel run :trader -- \\\n",
     "  --input_ohlc_history_delimited_proto_file=\"/$(pwd)/data/bitstampUSD_5min.dpb\" \\\n",
     "  --trader=\"rebalancing\" \\\n",
-    "  --output_exchange_log_file=\"/$(pwd)/data/bitstampUSD.out.csv\" \\\n",
-    "  --output_trader_log_file=\"/$(pwd)/data/rebalancing_trader_log.csv\" \\\n",
+    "  --output_exchange_log_file=\"/$(pwd)/data/bitstampUSD_5min_rebalancing_exchange_log.out.csv\" \\\n",
+    "  --output_trader_log_file=\"/$(pwd)/data/bitstampUSD_5min_rebalancing_trader_log.csv\" \\\n",
     "  --start_date_utc=\"2017-01-01\" \\\n",
-    "  --end_date_utc=\"2019-01-01\" \\\n",
+    "  --end_date_utc=\"2021-01-01\" \\\n",
     "  --start_base_balance=1.0 \\\n",
     "  --start_quote_balance=0.0\n",
     "```\n",
     "\n",
-    "Now let's analyze the resulting exchange log: `data/bitstampUSD.out.csv`."
+    "Now let's analyze the resulting exchange log: `data/bitstampUSD_5min_rebalancing_exchange_log.out.csv`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "2017-01-01 00:15:00+00:00    NaN          964.355  0.700867  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "exchange_log_frame = pd.read_csv('../data/bitstampUSD.out.csv', names=[\n",
+    "exchange_log_frame = pd.read_csv(\n",
+    "    '../data/bitstampUSD_5min_rebalancing_exchange_log.out.csv', names=[\n",
     "    'timestamp_sec', 'open', 'high', 'low', 'close', 'volume',\n",
     "    'base_balance', 'quote_balance', 'total_fee',\n",
     "    'order_type', 'order_side', 'security_amount', 'cash_amount', 'price'])\n",
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is exactly what we would like to see. We start with a full portfolio allocation to the base (crypto)currency immediatelly followed by a single market sell order restoring the $0.7$-allocation. Then we keep the allocation within the range $(0.70 * 0.95; 0.70 * 1.05)$."
+    "This is exactly what we would like to see. We start with a full portfolio allocation to the base (crypto)currency immediatelly followed by a single market sell order restoring the $0.70$-allocation. Then we keep the allocation within the range $(0.70 * 0.95; 0.70 * 1.05)$."
    ]
   }
  ],
