--- a/traders/stop_trader.ipynb
+++ b/traders/stop_trader.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Stop Trader\n",
     "\n",
-    "The goal of the `stop_trader` is to explore whether it makes sense to set up stop-losses (or stop-buys) when entering a long position (or when selling everything).\n",
+    "The goal of the `stop` trader is to explore whether it makes sense to set up stop-losses (or stop-buys) when entering a long position (or when selling everything).\n",
     "\n",
-    "Imagine that you buy a certain amount $a$ of a cryptocurrency (e.g. `BTC`) at price $p$. Is it a good idea to set up a stop-loss at some lower price $p' < p$? If so, how to determine the price $p'$? What if later the price $p$ goes up? Should we then adjust (increase) the stop-loss price $p'$ as well? These are some of the questions that we would like to answer by evaluating many instances of the `stop_trader` over the `BTCUSD` price history.\n",
+    "Imagine that you buy a certain amount $a$ of a cryptocurrency (e.g. `BTC`) at price $p$. Is it a good idea to set up a stop-loss at some lower price $p' < p$? If so, how to determine the price $p'$? What if later the price $p$ goes up? Should we then adjust (increase) the stop-loss price $p'$ as well? These are some of the questions that we would like to answer by evaluating many instances of the `stop` trader over the `BTCUSD` price history.\n",
     "\n",
     "At any given moment the trader has (on its account) some amount $b$ of a base (crypto)currency (e.g. `BTC`) and some amount $q$ of a quote currency (e.g. `USD`). Let $p$ denote the base (crypto)currency price (e.g. `BTCUSD` price). If $b * p \\ge q$ we say that the trader is in the `LONG` state. Otherwise, we say that the trader is in the `CASH` state.\n",
     "\n",
@@ -25,60 +25,61 @@
     "* `stop_order_increase_per_day` $\\gamma_+$: In the case (A) we allow the stop-loss price to increase by at most $\\gamma_+ * 100\\%$ per day, although we do not allow the stop-loss price to exceed the $(1 - \\beta) * p$ threshold.\n",
     "* `stop_order_decrease_per_day` $\\gamma_-$: In the case (B) we allow the stop-buy price to decrease by at most $\\gamma_- * 100\\%$ per day, although we do not allow the stop-buy price to drop below the $(1 + \\beta) * p$ threshold.\n",
     "\n",
-    "Batch evaluation of the `stop_trader` reveals that setting $\\alpha = \\beta = 0.1$, $\\gamma_+ = 0.01$, and $\\gamma_- = 0.1$ gives a reasonable performance (although there are many other settings which perform similarly). With these specific parameters the trader performs as follows (evaluated over 6 month intervals):\n",
+    "Batch evaluation of the `stop` trader reveals that setting $\\alpha = \\beta = 0.1$, $\\gamma_+ = 0.01$, and $\\gamma_- = 0.1$ gives a reasonable performance (although there are many other settings which perform similarly). With these specific parameters the trader performs as follows (evaluated over 6 month time periods within the 4 year time period: `[2017-01-01 - 2021-01-01)` with 5 minute sampling rate):\n",
     "\n",
     "```\n",
-    "[2017-01-01 00:00:00 - 2017-07-01 00:00:00): 0.745228\n",
-    "[2017-02-01 00:00:00 - 2017-08-01 00:00:00): 0.876014\n",
-    "[2017-03-01 00:00:00 - 2017-09-01 00:00:00): 0.893903\n",
-    "[2017-04-01 00:00:00 - 2017-10-01 00:00:00): 1.02772\n",
-    "[2017-05-01 00:00:00 - 2017-11-01 00:00:00): 1.03472\n",
-    "[2017-06-01 00:00:00 - 2017-12-01 00:00:00): 0.90212\n",
-    "[2017-07-01 00:00:00 - 2018-01-01 00:00:00): 1.0353\n",
-    "[2017-08-01 00:00:00 - 2018-02-01 00:00:00): 0.771577\n",
-    "[2017-09-01 00:00:00 - 2018-03-01 00:00:00): 0.92533\n",
-    "[2017-10-01 00:00:00 - 2018-04-01 00:00:00): 0.877512\n",
-    "[2017-11-01 00:00:00 - 2018-05-01 00:00:00): 0.918183\n",
-    "[2017-12-01 00:00:00 - 2018-06-01 00:00:00): 1.00585\n",
-    "[2018-01-01 00:00:00 - 2018-07-01 00:00:00): 1.1751\n",
-    "[2018-02-01 00:00:00 - 2018-08-01 00:00:00): 1.25298\n",
-    "[2018-03-01 00:00:00 - 2018-09-01 00:00:00): 1.33426\n",
-    "[2018-04-01 00:00:00 - 2018-10-01 00:00:00): 1.28329\n",
-    "[2018-05-01 00:00:00 - 2018-11-01 00:00:00): 1.17252\n",
-    "[2018-06-01 00:00:00 - 2018-12-01 00:00:00): 1.40445\n",
-    "[2018-07-01 00:00:00 - 2019-01-01 00:00:00): 1.4096\n",
-    "[2018-08-01 00:00:00 - 2019-02-01 00:00:00): 1.45463\n",
-    "[2018-09-01 00:00:00 - 2019-03-01 00:00:00): 1.27935\n",
-    "[2018-10-01 00:00:00 - 2019-04-01 00:00:00): 1.46851\n",
-    "[2018-11-01 00:00:00 - 2019-05-01 00:00:00): 1.44526\n",
-    "[2018-12-01 00:00:00 - 2019-06-01 00:00:00): 0.987273\n",
-    "[2019-01-01 00:00:00 - 2019-07-01 00:00:00): 0.94727\n",
-    "[2019-02-01 00:00:00 - 2019-08-01 00:00:00): 0.876466\n",
-    "[2019-03-01 00:00:00 - 2019-09-01 00:00:00): 0.807884\n",
-    "[2019-04-01 00:00:00 - 2019-10-01 00:00:00): 0.856121\n",
-    "[2019-05-01 00:00:00 - 2019-11-01 00:00:00): 0.754844\n",
-    "[2019-06-01 00:00:00 - 2019-12-01 00:00:00): 0.685491\n",
-    "[2019-07-01 00:00:00 - 2020-01-01 00:00:00): 0.726241\n",
-    "[2019-08-01 00:00:00 - 2020-02-01 00:00:00): 0.91875\n",
-    "[2019-09-01 00:00:00 - 2020-03-01 00:00:00): 1.10986\n",
-    "[2019-10-01 00:00:00 - 2020-04-01 00:00:00): 1.42124\n",
-    "[2019-11-01 00:00:00 - 2020-05-01 00:00:00): 1.56454\n",
-    "[2019-12-01 00:00:00 - 2020-06-01 00:00:00): 1.39337\n",
-    "[2020-01-01 00:00:00 - 2020-07-01 00:00:00): 1.43864\n",
-    "[2020-02-01 00:00:00 - 2020-08-01 00:00:00): 1.33628\n",
-    "[2020-03-01 00:00:00 - 2020-09-01 00:00:00): 1.17149\n",
-    "[2020-04-01 00:00:00 - 2020-10-01 00:00:00): 0.860107\n",
-    "[2020-05-01 00:00:00 - 2020-11-01 00:00:00): 0.681354\n",
-    "[2020-06-01 00:00:00 - 2020-12-01 00:00:00): 0.860026\n",
+    "bazel run :trader -- \\\n",
+    "  --input_ohlc_history_delimited_proto_file=\"/$(pwd)/data/bitstampUSD_5min.dpb\" \\\n",
+    "  --trader=\"stop\" \\\n",
+    "  --start_date_utc=\"2017-01-01\" \\\n",
+    "  --end_date_utc=\"2021-01-01\" \\\n",
+    "  --evaluation_period_months=6 \\\n",
+    "  --start_base_balance=1.0 \\\n",
+    "  --start_quote_balance=0.0\n",
     "```\n",
     "\n",
-    "As you can see, the `stop_trader` sometimes beats the Buy-And-HODL strategy (although not always). Over the whole period:\n",
+    "Output (shortened):\n",
     "\n",
     "```\n",
-    "[2017-01-01 00:00:00 - 2020-12-01 00:00:00): 1.10669\n",
+    "...\n",
+    "Reading OHLC history from: .../data/bitstampUSD_5min.dpb\n",
+    "- Loaded 420768 records in 0.782 seconds\n",
+    "- Selected 420768 records within the time period: [2017-01-01 00:00:00 - 2021-01-01 00:00:00)\n",
+    "\n",
+    "stop-trader[0.100|0.100|0.010|0.100] evaluation:\n",
+    "------------------ period ------------------    trader & base gain    score    t&b volatility\n",
+    "[2017-01-01 00:00:00 - 2017-07-01 00:00:00):     90.13%    155.13%    0.745    0.744    0.767\n",
+    "[2017-02-01 00:00:00 - 2017-08-01 00:00:00):    159.53%    196.26%    0.876    0.768    0.845\n",
+    "[2017-03-01 00:00:00 - 2017-09-01 00:00:00):    255.64%    297.85%    0.894    0.801    0.877\n",
+    "[2017-04-01 00:00:00 - 2017-10-01 00:00:00):    314.13%    302.96%    1.028    0.846    0.921\n",
+    "[2017-05-01 00:00:00 - 2017-11-01 00:00:00):    393.33%    376.78%    1.035    0.872    0.946\n",
+    "...\n",
+    "[2020-03-01 00:00:00 - 2020-09-01 00:00:00):     59.34%     36.01%    1.171    0.651    0.982\n",
+    "[2020-04-01 00:00:00 - 2020-10-01 00:00:00):     44.16%     67.60%    0.860    0.546    0.571\n",
+    "[2020-05-01 00:00:00 - 2020-11-01 00:00:00):      8.95%     59.90%    0.681    0.501    0.512\n",
+    "[2020-06-01 00:00:00 - 2020-12-01 00:00:00):     79.72%    108.97%    0.860    0.490    0.517\n",
+    "[2020-07-01 00:00:00 - 2021-01-01 00:00:00):    206.57%    218.20%    0.963    0.522    0.542\n",
+    "\n",
+    "Evaluated in 10.021 seconds\n",
+    "\n",
     "```\n",
     "\n",
-    "the `stop_trader` would beat the Buy-And-HODL strategy only by 10%. That being said, there are many other (suboptimal) choices of the hyper-parameters that would lead to much worse performance. It is questionable whether an average person would be able to set the stop-losses / stop-buys better than this algorithm. If not then an average person would be better off with HODLing without any stop-losses."
+    "As you can see, the `stop` trader sometimes beats the Buy-And-HODL strategy (although not always). Over the whole 4 year time period: `[2017-01-01 - 2021-01-01)` with 5 minute sampling rate:\n",
+    "\n",
+    "```\n",
+    "...\n",
+    "Reading OHLC history from: .../data/bitstampUSD_5min.dpb\n",
+    "- Loaded 420768 records in 1.064 seconds\n",
+    "- Selected 420768 records within the time period: [2017-01-01 00:00:00 - 2021-01-01 00:00:00)\n",
+    "\n",
+    "stop-trader[0.100|0.100|0.010|0.100] evaluation:\n",
+    "------------------ period ------------------    trader & base gain    score    t&b volatility\n",
+    "[2017-01-01 00:00:00 - 2021-01-01 00:00:00):   3220.23%   2900.17%    1.107    0.713    0.828\n",
+    "\n",
+    "Evaluated in 1.842 seconds\n",
+    "```\n",
+    "\n",
+    "the `stop` trader would beat the Buy-And-HODL strategy only by 10%. That being said, there are many other (suboptimal) choices of the hyper-parameters that would lead to much worse performance. Thus it is questionable whether an average person would be able to set the stop-losses / stop-buys better than this algorithm. If not then an average person would be better off with HODLing without any stop-losses."
    ]
   }
  ],
