Notebook for downloading historical market data

--- a/fear_and_greed_index.ipynb
+++ b/fear_and_greed_index.ipynb
@@ -21,13 +21,13 @@
     "import pandas as pd\n",
     "import urllib.request, json\n",
     "\n",
-    "\n",
     "fear_and_greed_index_data = {\n",
     "    'timestamp_sec': [],\n",
     "    'value': [],\n",
     "}\n",
     "\n",
-    "with urllib.request.urlopen('https://api.alternative.me/fng/?limit=10000') as url:\n",
+    "with urllib.request.urlopen(\n",
+    "        'https://api.alternative.me/fng/?limit=10000') as url:\n",
     "    fear_and_greed_index_json = json.loads(url.read().decode())\n",
     "    for data in fear_and_greed_index_json['data']:\n",
     "        fear_and_greed_index_data['timestamp_sec'].append(int(data['timestamp']))\n",
@@ -36,8 +36,9 @@
     "fear_and_greed_frame = pd.DataFrame(fear_and_greed_index_data).sort_values(\n",
     "    by='timestamp_sec').reset_index(drop=True)[['timestamp_sec', 'value']]\n",
     "\n",
-    "fear_and_greed_frame.to_csv(\n",
-    "    'data/fear_and_greed_index.csv', index=False, header=None)\n",
+    "fear_and_greed_frame.to_csv('data/fear_and_greed_index.csv',\n",
+    "                            index=False,\n",
+    "                            header=None)\n",
     "\n",
     "fear_and_greed_frame[:5]"
    ]
